Workarounds for brain-dead Mozilla apps; small theme fixes
Mozilla applications are stuck in la-la land.  They use the idiotic theming
system put in place with the first GTK+ 3 versions, which involved loads of
style classes for various parts of a widget, and Mozilla apps make a lot of
assumptions about the theme.  On top of that, Mozilla relies upon several
now-deprecated features of the GTK theming interface, so if you attempt to
cater to Mozilla apps, GTK ignores what your theme says.  Ugh.  Oh well,
I've done about what I can do for Mozilla now.  If app developers want less
breakage (looking at you, Pale Moon!), then they'd better get their stuff
in gear and switch to GTK+ 3.20+ theming!

Oh well.  As for other stuff not much changed, besides a reversion of the
gray background for unfocused-but-selected text.  That is just because
applications that draw custom widgets (again, like Mozilla applications)
often don't bother to state that they want a *focused* selection drawn;
they just want a selection drawn.  And GTK assumes that if it didn't
explicitely specify focus, that the thing must be unfocused.  Sigh, I
try my best.

--- a/themes/Raleigh/gtk-3.0/application-styles/mate-panel.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/mate-panel.css
@@ -18,8 +18,12 @@ MatePanelAppletFrameDBus > MatePanelAppletFrameDBus
 {
 	border-image-width: 1px 0 2px 0;
 	border-image-slice: 1 2 2 1;
-	background-repeat: repeat-y;
 	background-position: top left;
+}
+
+PanelToplevel MatePanelAppletFrameDBus > MatePanelAppletFrameDBus
+{
+	background-repeat: repeat-y;
 	background-size: 10px 3px;
 }
 
