Thunar:  Fix icon view rubberband selection opacity
I forgot to style the "rubberband" selection in Thunar.  Before this commit,
when the user dragged over a set of items in icon view in Thunar, the
rubberband selection (which shows the extent of the selection) would be a
totally opaque gray or white, and would completely obscure the selected items.

Thanks to @commandlinegamer for reporting this issue, and also for providing
some code to fix this.  I also modified the Caja rubberbanding code so that
Thunar and Caja can look as similar as possible.

--- a/themes/Raleigh/gtk-3.0/application-styles/thunar.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/thunar.css
@@ -2,3 +2,11 @@ window.thunar widget.view
 {
 	background-color: @color_2;
 }
+
+window.thunar widget.view.rubberband
+{
+	background-color: alpha (@selected_bg_color, 0.3);
+	border-color: @fg_color;
+	border-style: solid;
+	border-width: 1px;
+}
