--- a/themes/Raleigh/gtk-3.0/application-styles/caja.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/caja.css
@@ -22,7 +22,10 @@
 
 widget.view.rubberband
 {
-	background-color: alpha (@selected_bg_color, 0.6);
+	background-color: alpha (@selected_bg_color, 0.3);
+	border-color: @fg_color;
+	border-style: solid;
+	border-width: 1px;
 }
 
 /*
